[package]
name = "little-stomper"
version = "0.2.0"
authors = ["Toby Grasl <herblet@knowledge42.com>"]
edition = "2018"
description = "A crate provideing an implementation of the STOMP 1.2 protocol."
homepage = "https://github.com/herblet/little-stomper"
license = "MIT"
repository = "https://github.com/herblet/little-stomper"

[dependencies]
tokio = { version = "1.6", features = ["full"] }
tokio-stream = "0.1.5"
futures = { version = "^0.3", default-features = false, features = ["alloc"] }
tokio-tungstenite = "^0.14"
stomp-parser = { version = "^0.5", git = "https://github.com/herblet/stomp-parser", branch="main"}
async-map = { version = "^0.2.2" }
log = "^0.4"
env_logger = "^0.8"
im = "^15.0.0"
uuid = { version = "^0.8.2", features = ["v4"] }
either = "1.6"

[dependencies.tungstenite]
version = "^0.13.0"
default-features = false

[dev-dependencies]
mockall = "0.9.1"
tokio = { version = "1.6", features = ["full","test-util"] }