[package]
name = "little-stomper"
version = "0.3.2"
authors = ["Toby Grasl <herblet@knowledge42.com>"]
edition = "2018"
description = "A crate provideing an implementation of the STOMP 1.2 protocol."
homepage = "https://github.com/herblet/little-stomper"
license = "MIT"
repository = "https://github.com/herblet/little-stomper"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio-tungstenite = "0.18"
sender-sink = { version = "0.2", path="../sender-sink" }
stomp-parser = { version = "0.6", path="../stomp-parser" } 
stomp-test-utils = { version = "0.2", path="../stomp-test-utils" }
async-map = { path="../async-map" }
log = "0.4"
env_logger = "0.10"
im = "15"
uuid = { version = "1", features = ["v4"] }
either = "1"

[dependencies.tungstenite]
version = "^0.18.0"
default-features = false

[dev-dependencies]
mockall = "0.11"
tokio = { version = "1", features = ["full","test-util"] }